--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon",
     "test": "jest",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,6 +16,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
+    "@prisma/client": "^5.19.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "prisma": "^5.19.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
