--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.19.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
-    "@prisma/client": "^5.19.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
