--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev":  "nodemon --exec ts-node src/index.ts",
     "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
