--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,120 @@
-node_modules
-/dist
-.env
+# Dependencies
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+
+# Build outputs
+dist/
+build/
+*.log
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+prisma/migrations/dev.db*
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
+
+# OS
+Thumbs.db
+Desktop.ini
+
+# Server specific
+server/dist/
+server/node_modules/
+server/.env
+server/coverage/
+server/*.log
+
+# Mobile specific
+mobile/node_modules/
+mobile/.expo/
+mobile/.expo-shared/
+mobile/dist/
+mobile/web-build/
+
+# React Native / Expo
+mobile/.bundle
+mobile/.cache
+mobile/build/
+mobile/Pods/
+mobile/ios/build/
+mobile/ios/Pods/
+mobile/android/.gradle/
+mobile/android/app/build/
+mobile/android/build/
+mobile/android/.idea/
+mobile/android/local.properties
+mobile/android/*.iml
+mobile/android/*.keystore
+mobile/android/app/release/
+mobile/android/captures/
+mobile/android/gradle/
+mobile/android/gradlew
+mobile/android/gradlew.bat
+
+# iOS
+mobile/ios/build/
+mobile/ios/Pods/
+mobile/ios/*.xcworkspace/xcuserdata/
+mobile/ios/*.xcodeproj/xcuserdata/
+mobile/ios/*.xcodeproj/project.xcworkspace/xcuserdata/
+mobile/ios/Podfile.lock
+*.xcuserstate
+
+# Android
+mobile/android/.gradle/
+mobile/android/build/
+mobile/android/app/build/
+mobile/android/local.properties
+mobile/android/.cxx/
+*.apk
+*.aab
+*.dex
+*.class
+
+# Metro
+mobile/.metro-health-check*
+
+# Testing
+coverage/
+*.test.js.snap
+.nyc_output/
+
+# Temporary files
+*.tmp
+*.temp
+*.cache
+.eslintcache
+
+# Package manager locks (keep one, ignore others if needed)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Firebase
+google-services.json
+GoogleService-Info.plist
+firebase-debug.log
+
+# Misc
+*.bak
+*.backup
+*.old
